--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,32 +1,83 @@
+# ==============================
+# = APPLICATION CONFIG
+# ==============================
 spring.application.name=bookverse
 
 # ==============================
 # = SERVER CONFIG
 # ==============================
-server.port=8080
+server.port=8081
+server.error.include-message=always
+server.error.include-binding-errors=always
 
 # ==============================
-# = DATABASE CONFIG
+# = DATABASE CONFIG (PostgreSQL)
 # ==============================
 spring.datasource.url=jdbc:postgresql://localhost:5432/bookverse_db
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
 
+# Connection Pool Settings
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.minimum-idle=5
+spring.datasource.hikari.connection-timeout=20000
+
 # ==============================
-# = JPA CONFIG
+# = JPA/HIBERNATE CONFIG
 # ==============================
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.open-in-view=false
+
+# ==============================
+# = LOGGING CONFIG
+# ==============================
+logging.level.root=INFO
+logging.level.com.bookverse.backend=DEBUG
+logging.level.org.springframework.security=DEBUG
+logging.level.org.springframework.web=DEBUG
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 # ==============================
 # = JWT CONFIG
 # ==============================
-app.jwt.secret=MYSECRETKEY123456789
+# Secret key must be at least 256 bits (32 bytes) for HS256
+# This is a plain text secret (not Base64) - at least 32 characters
+app.jwt.secret=bookverse-super-secret-key-for-jwt-authentication-2024-secure
+# Token expiration: 86400000ms = 24 hours
 app.jwt.expiration=86400000
 
 # ==============================
 # = GOOGLE BOOKS API
 # ==============================
-google.api.key=
+# Get your API key from: https://console.cloud.google.com/apis/credentials
+google.api.key=AIzaSyAR_TT_3bukR8gsMzxmA3TfV9qMgX_05AI
 
+# ==============================
+# = CORS CONFIGURATION
+# ==============================
+# Allowed origins are configured in AppConfig.java
+# Default: http://localhost:3000, http://localhost:5173
+
+# ==============================
+# = ACTUATOR (Optional - for monitoring)
+# ==============================
+management.endpoints.web.exposure.include=health,info
+management.endpoint.health.show-details=when-authorized
+
+# ==============================
+# = FILE UPLOAD (Optional)
+# ==============================
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
+# ==============================
+# = JACKSON CONFIG
+# ==============================
+spring.jackson.serialization.write-dates-as-timestamps=false
+spring.jackson.time-zone=UTC
+spring.jackson.default-property-inclusion=non_null
