--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,7 +1,7 @@
 # ==============================
 # = DEV PROFILE CONFIGURATION
 # ==============================
-spring.profiles.active=dev
+# spring.profiles.active=dev
 
 # ==============================
 # = DATABASE CONFIG (H2 for development)
