--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -81,3 +81,7 @@ spring.servlet.multipart.max-request-size=10MB
 spring.jackson.serialization.write-dates-as-timestamps=false
 spring.jackson.time-zone=UTC
 spring.jackson.default-property-inclusion=non_null
+
+
+
+spring.profiles.active=dev
